# imaging-source-recorder

./: LICENSE  README.md  imaging-source-recorder.spec  pyproject.toml
default_config/: device.json
src/: app.py  demoapp.py  fastapi_http_server.py  gui.py  hello.py  imaging_source_recorder.py  mainwindow.py  recorder.py  simple_https_server.py
test/: test_fastapi_http_server.py
