[project]
name = "imaging-source-recorder"
version = "0.1.0"
description = "Desktop app for recording from Imaging Source Cameras"
authors = [
      {name = "Joscha Schmiedt", email = "schmiedt@brain.uni-bremen.de"},
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.11",
    'imagingcontrol4>=1.2.0',
    'imagingcontrol4pyside6',
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]

[tool.uv]
package = true

[project.scripts]
imaging-source-recorder-gui = "gui:main_gui"
