[project]
name = "imaging-source-recorder"
version = "0.1.0"
description = "Desktop app for recording from Imaging Source Cameras"
authors = [
      {name = "Joscha Schmiedt", email = "schmiedt@brain.uni-bremen.de"},
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.11",
    'imagingcontrol4>=1.2.0',
    'imagingcontrol4pyside6',
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
]

[tool.uv]
package = true

[project.scripts]
imaging-source-recorder-gui = "gui:main_gui"
